syntax = "proto3";

option go_package = "genproto/salary_service";

package salary_service_go;
import "google/protobuf/empty.proto";


service SalaryService {
    rpc Create(CreateSalary) returns (GetSalary) {}
    rpc GetByID(SalaryPrimaryKey) returns (GetSalary) {}
    rpc GetList(GetListSalaryRequest) returns (GetListSalaryResponse) {}
    rpc Update(UpdateSalary) returns (GetSalary) {}
    rpc Delete(SalaryPrimaryKey) returns (google.protobuf.Empty) {}
    rpc Check(SalaryPrimaryKey) returns (CheckSalaryResp){}
}



message SalaryPrimaryKey {
    string id = 1;
}

message CreateSalary {
    string cost_name = 1;
    string employee_id = 2;
    float terminal_paid = 3;
    float cash_paid = 4;
    string comment = 5;
    string date_of_salary = 6;
}

message GetSalary {
    string cost_name = 1;
    string employee_id = 2;
    float terminal_paid = 3;
    float cash_paid = 4;
    string comment = 5;
    string date_of_salary = 6;
    string created_at = 7;
    string updated_at = 8;
    string id = 9;
}


message UpdateSalary {
    string cost_name = 1;
    string employee_id = 2;
    float terminal_paid = 3;
    float cash_paid = 4;
    string comment = 5;
    string date_of_salary = 6;
    string id = 7;
}

message GetListSalaryRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListSalaryResponse {
    int64 Count = 1;
    repeated GetSalary Salaries = 2;
}


message CheckSalaryResp {
    bool check = 1;
}
